added all files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-appsamurai-case-study",
+  "name": "react-pokedex-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
